<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingEnd="?attr/dialogPreferredPadding"
        android:paddingStart="?attr/dialogPreferredPadding"
        android:paddingTop="?attr/dialogPreferredPadding">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/beacons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/beacons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wifi" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/magneticVector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/magneticVector"
            android:checked="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/beacons" />

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:text="@string/checkbox_error"
            android:textColor="@color/colorError"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/magneticVector"
            app:layout_constraintTop_toBottomOf="@id/magneticVector" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>