<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="1dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/typeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/type"
                android:textSize="@dimen/font_small"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/ble"
                android:textSize="@dimen/font_small"
                card_view:layout_constraintBottom_toBottomOf="@+id/typeLabel"
                card_view:layout_constraintStart_toEndOf="@+id/typeLabel"
                card_view:layout_constraintTop_toTopOf="@+id/typeLabel" />

            <TextView
                android:id="@+id/bssidLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/bssid"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/typeLabel" />

            <TextView
                android:id="@+id/bssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/bssid_example"
                card_view:layout_constraintBottom_toBottomOf="@+id/bssidLabel"
                card_view:layout_constraintStart_toEndOf="@+id/bssidLabel"
                card_view:layout_constraintTop_toTopOf="@+id/bssidLabel" />

            <TextView
                android:id="@+id/valueLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/value"
                card_view:layout_constraintBottom_toBottomOf="@+id/value"
                card_view:layout_constraintEnd_toStartOf="@+id/value"
                card_view:layout_constraintTop_toTopOf="@+id/value" />

            <TextView
                android:id="@+id/value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="16dp"
                android:hint="@string/value_example"
                android:textSize="@dimen/font_big"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>