<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        card_view:cardBackgroundColor="@color/cardMvBackground"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="1dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/typeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/type"
                android:textSize="@dimen/font_small"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/mv"
                android:textSize="@dimen/font_small"
                card_view:layout_constraintBottom_toBottomOf="@+id/typeLabel"
                card_view:layout_constraintStart_toEndOf="@+id/typeLabel"
                card_view:layout_constraintTop_toTopOf="@+id/typeLabel" />

            <TextView
                android:id="@+id/xLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/x"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/type"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/xValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/mag_value_example"
                android:textSize="@dimen/font_med"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/xLabel"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/xuT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/uT"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/xValue"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/y"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/xuT"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/mag_value_example"
                android:textSize="@dimen/font_med"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/yLabel"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/yuT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/uT"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/yValue"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/zLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/z"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/yuT"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/zValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/mag_value_example"
                android:textSize="@dimen/font_med"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/zLabel"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/zuT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/uT"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@id/zValue"
                card_view:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>